[package]
name = "matrix-register"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "ec3657d", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
toml = "1.1.0"
